* added six nation free for all mod for revised map (the_devil_inside)

* fix bug [ 1655283 ] Java 6 reserves java.awt.Window method getWindows()

* update to great war 1.3 (Jason Clark)

* add canals to Great War and Big World (Black Elk)

Changes for 0.9.0.2

* fix bug [ 1640596 ] 0.9.0.1 Revised Map Wrap Issue (sgb)

* Fix bug where dissapearing networks players would not be removed from the game (sgb)

* allow lobby server to ping clients to ensure the are still there (sgb)

Changes for 0.9.0.1

* Adjusted British starting units (Jason Clark)

* fixed infantry defense in Classic (sgb)

Changes for 0.9

* improve great war map (Jason Clark)

* improve great war african markers (Jason Clark)

* fixed orientation of french zeppelin in great war (Jason Clark)

* In great war, the US now has a starting transport, 1 inf and 1 cav.  1 us cruiser removed. (Jason Clark)

* In great war, removed connection between Tanga and Weidmannshiel. (Jason Clark)

* focus on action button when battle window is activated (sgb)

* lobby server checks client's computer is network accessble when client hosts a game (sgb)

* fix [ 1611289 ] map scrolling bug (sgb)

* client only waits 10 seconds for connection to servr to be made before aborting (sgb)

Changes for 0.8.6

* fix infantry in classic (sgb)

* make convoy zones stand out better (sgb)

* read output of exec'd lobby games (sgb)

* Saved games in user.home/triplea (not .triplea) for linux and user.home/Documents/triplea for mac (sgb)

* better logic for finding local ip address (sgb)

* fix loby where clients could not find real server address (sgb)

Changes for 0.8.5

* allow neutrals to have different unit types (sgb)

* fix bugs where all bombers in lhtr defend at 2 (sgb)

* update big world map (surtur2)

* alt click/unclick selects 1/10 the type (Nate)

* allow weak ai to move into empty nuetral territories (Nate)

* make dialog clearer for planes can't land (sgb)

* handle marti dice server error messages (sgb,clausewitz)