@@ -1,6 +1,8 @@
+* better route finding logic (sgb)
+
 * added six nation free for all mod for revised map (the_devil_inside)
 
-* fix bug [ 1655283 ] Java 6 reserves java.awt.Window method getWindows()
+* fix bug [ 1655283 ] Java 6 reserves java.awt.Window method getWindows() (sgb)
 
 * update to great war 1.3 (Jason Clark)
 
